# Corgi3DS

./: CMakeLists.txt  Corgi3DS.pro
.github/workflows/: build-macos.yml  build-ubuntu-aarch64.yml  build-ubuntu.yml  build-windows.yml  windows_build.sh
src/: CMakeLists.txt
